# processor_architecture

./: .gitignore  README.md  config_demo.py  pipeline.py  processor.py  processor_customized.py  pyproject.toml  sample_pipeline.json
examples/: doc_chunker_embedding.py  draft_how_to_return_in_order.py  dynamic_processor_execution.py  monitoring_example.py  nested_pipeline_example.py  pipeline_astreaming.py  runtime_processor_configuration.py  sample.txt  session_example.py  simple_runtime_demo.py  single_processor_pipeline.py  test_import.py
processor_pipeline/: __init__.py
processor_pipeline/core/: __init__.py  core_interfaces.py  graph_model.py  helper.py  pipe.py  pipeline.py  processor.py
processor_pipeline/core/tests/: test_buffer.py  test_graph.py  test_multiple_pipes.py  test_peek_functionality.py  test_pipeline.py
processor_pipeline/monitoring/: __init__.py  client.py  collectors.py  hooks.py  models.py  plugin.py
processor_pipeline/new_core/: __init__.py  core_interfaces.py  factory_interfaces.py  gemeni_try.py  gemeni_try_2.py  graph.py  graph_model.py  graph_utils.py  interfaces.py  logger.py  new_graph.py  old_graph.py  other_interfaces.py  pipe.py  pipe_hub.py  pipeline.py  processor.py  test.py  test_async_for.py  test_buffer.py  test_graph.py  test_long_input_generator.py  test_long_input_normal.py  test_peek_functionality.py  test_registory_meta.py
processor_pipeline/new_core/tests/: test_blocking_pipe.py  test_dynamic_adding_background_task_to_asyncprocessor.py  test_graph.py  test_long_input_normal.py  test_pipe_hub.py  test_pipeline.py
processor_pipeline/v2/: README.md  __init__.py
processor_pipeline/v2/config/: __init__.py  loader.py
processor_pipeline/v2/core/: __init__.py  checkpoint.py  errors.py  graph.py  interfaces.py  monitor.py  pipe.py  processor.py  registry.py
processor_pipeline/v2/examples/: __init__.py  comprehensive_demo.py  registry_example.py
processor_pipeline/v2/execution/: __init__.py  strategies.py
processor_pipeline/v2/utils/: __init__.py  helpers.py
visualization/: README.md  docker-compose.yml  start_server.py
visualization/_backup/: graph_demo.tsx
visualization/backend/: __init__.py  main.py  models.py  processors.py  requirements.txt  session_manager.py  websocket_manager.py
visualization/backend/tests/: test.sh
visualization/frontend/: package-lock.json  package.json  tsconfig.json
visualization/frontend/app/: page.tsx
visualization/frontend/app/components/: GraphDemo.tsx  GraphFullDemo.tsx
